# zx80-dev-tools

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  cspect.sh  main.c
basic/: clock.bas  index.bas
scripts/: Makefile  zx_tools.py
src/: audio.asm  constants.asm  index.asm  main.asm  sprites.asm  text_mover.asm
